--- a/index.html
+++ b/index.html
@@ -18,9 +18,41 @@
             <li>Blogs</li>
         </ul>
     </nav>
+    <hr>
     <header>
         <img src="images/header-img.svg">
         <h1>Sushil Kumar the Web Developer</h1>
     </header>
+    <section>
+        <div>
+            <h1>Technologies</h1>
+            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1>Projects</h1>
+            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+            <a href="/">See my projects</a>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1>Blogs</h1>
+            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
+            <a href="/">See my blogs</a>
+        </div>
+    </section>
+
+    <footer>
+        <div>social media presence</div>
+        <ul>
+            <li>github</li>
+            <li>twitter</li>
+            <li>linkedin</li>
+        </ul>
+    </footer>
 </body>
 </html>
